Lowercase package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DankBot",
+  "name": "dankbot2",
   "version": "1.0.0",
   "description": "Discord bot for my music server, based on VISION",
   "main": "app.js",
