--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot for my music server, based on VISION",
   "main": "app.js",
   "scripts": {
-    "start": "node .",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-vision": "cd node_modules/Vision-Reloaded && git pull"
   },
@@ -15,6 +15,7 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "googleapis": "^45.0.0",
+    "nodemon": "^1.19.4",
     "request": "^2.88.0"
   }
 }
