--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "Vision-Reloaded": "file:../Vision-Reloaded",
+    "cron": "^1.7.2",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "googleapis": "^45.0.0",
